--- a/myonlinestories/package.json
+++ b/myonlinestories/package.json
@@ -2,10 +2,11 @@
   "name": "myonlinestories",
   "version": "1.0.0",
   "description": "AI-powered personalized children's story generator with Kimi AI and Runware integration",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node src/server.js",
+    "dev": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2"
